# moodengine

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  cliff.toml  conftest.py  pyproject.toml  release-please-config.json  renovate.json
.claude/agents/: standards-reviewer.md
.claude/rules/: ci-workflows.md  code-style.md  comments-and-docs.md  dependencies.md  embeddings.md  performance.md  testing.md
.claude/skills/new-module/: SKILL.md
.claude/skills/quality-gate/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-please.yml  release.yml  security.yml
docs/: benchmarking.md
scripts/: 01_extract_embeddings.py  02_cluster.py  03_label_and_explore.py  04_search.py  05_evaluate.py  bench_valence_arousal.py  fetch_deam.py
src/moodengine/: __init__.py  _math.py  _typing.py  _validation.py  adapt.py  calibration.py  cluster.py  config.py  evaluation.py  exceptions.py  explain.py  feedback.py  io_audio.py  journey.py  labeling.py  mood_arc.py  novelty.py  pipeline.py  pooling.py  search.py  sequence.py  signals.py  viz.py
src/moodengine/embeddings/: __init__.py  base.py  clap.py  mert.py
tests/: conftest.py
tests/benchmarks/: test_hot_paths.py
tests/integration/: test_pipeline_cache_roundtrip.py
tests/integration/embeddings/: test_real_models.py
tests/unit/: test___init__.py  test__math.py  test__typing.py  test__validation.py  test_adapt.py  test_adapt_probe.py  test_adapt_supcon.py  test_calibration.py  test_cluster.py  test_config.py  test_evaluation.py  test_exceptions.py  test_explain.py  test_feedback.py  test_io_audio.py  test_journey.py  test_labeling.py  test_mood_arc.py  test_novelty.py  test_pipeline.py  test_pooling.py  test_projection.py  test_search.py  test_sequence.py  test_signals.py  test_viz.py
tests/unit/embeddings/: test_base.py  test_clap.py
